<resources>
    <string name="app_name">Panchoha</string>
    <string name="btTight">Колготки</string>
    <string name="btStockings">Панчохи</string>
    <string name="btSocks">Шкарпетки</string>
    <string name="btMen">Чоловікам</string>
    <string name="btKids">Діточкам</string>
    <string name="btFashion">Візерунки</string>
    <string name="btWinter">Взимку</string>
    <string name="btFall">Demi</string>
    <string name="btThin">Тоненькі</string>
    <string name="btLocation">Контакти</string>
    <string name="btOrder">Замовити</string>
    <string name="btComments">Коментарі</string>
    <string name="tvHello">В І Т А Є М О</string>
    <string name="tvComments">К О М Е Н Т А Р І</string>
    <string name="etComments">Коментуй тут</string>
    <string name="etName">назва товару</string>
    <string name="etSize">розмір</string>
    <string name="etColor">колір</string>
    <string name="etNumber">кількість одиниць</string>
    <string name="etPhone">номер телефона</string>
    <string name="activity_50_headline">Activity 50</string>
    <string name="activity_50_details">Колготки 50 ден. Колготки мають добру втяжку завдяки плотним шортикам. Є розміри 2, 3, 4, 5.</string>
    <string name="activity_50_price">110 грн</string>
    <string name="alpina_headline">Alpina</string>
    <string name="alpina_details">Колготки з вовни з кролячим пухом та термофлісом. Натуральні, теплі та м\'якенькі на дотик. Є 2, 3, 4, 5</string>
    <string name="alpina_price">290 грн</string>
    <string name="amalia_1_headline">Amalia 1</string>
    <string name="amalia_1_details">Фантазійні колготки 20 ден. Дуже гладеньки, приємні на дотик. Є розміри 2, 3, 4, 5</string>
    <string name="amalia_1_price">80 грн</string>
    <string name="amalia_11_headline">Amalia 11</string>
    <string name="amalia_11_details">Фантазійні колготки 20 ден. Дуже гладеньки, приємні на дотик. Є розміри 2, 3, 4</string>
    <string name="amalia_11_price">80 грн</string>
    <string name="amalia_rete_2_headline">Amalia rete 2</string>
    <string name="amalia_rete_2_details">Фантазійні колготки 40 ден в горошок, в основі мікросітка. Є розміри 2, 3, 4</string>
    <string name="amalia_rete_2_price">85 грн</string>
    <string name="angora_1_headline">Шкарпетки</string>
    <string name="angora_1_details">Шкарпетки високі, з ангори та вовни.</string>
    <string name="angora_1_price">65 грн</string>
    <string name="angora_2_headline">Шкарпетки</string>
    <string name="angora_2_details">Шкарпетки високі, з ангори та вовни.</string>
    <string name="angora_2_price">65 грн</string>
    <string name="arctica_250_headline">Arctica 250</string>
    <string name="arctica_250_details">Колготки з бавовни, махрові. Натуральні, теплі та м\'якенькі на дотик. Є розміри 2, 3, 4, 5, 6.</string>
    <string name="arctica_250_price">270 грн</string>
    <string name="attiva_20_headline">Attiva 20</string>
    <string name="attiva_20_details">Колготки 20 ден. Дуже гладеньки, приємні на дотик. Є розміри 2, 3, 4, 5.</string>
    <string name="attiva_20_price">80 грн</string>
    <string name="attiva_40_headline">Attiva 40</string>
    <string name="attiva_40_details">Колготки 40 ден. Дуже гладеньки, приємні на дотик. Є розміри 2, 3, 4, 5.</string>
    <string name="attiva_40_price">85 грн</string>
    <string name="attiva_70_headline">Attiva 70</string>
    <string name="attiva_70_details">Колготки 70 ден. Дуже гладеньки, приємні на дотик. Є розміри 2, 3, 4, 5.</string>
    <string name="attiva_70_price">115 грн</string>
    <string name="autograph_headline">Autograph 20</string>
    <string name="autograph_details">Фантазійні колготки 20 ден. Дуже гладеньки, приємні на дотик. Є розмір  4.</string>
    <string name="autograph_price">100 грн</string>
    <string name="blues_150_headline">Blues 150</string>
    <string name="blues_150_details">Колготки 150 ден з мікрофібри. Надійні та комфортні, м\'якенькі на дотик. Є 2, 3, 4, 5 розміри.</string>
    <string name="blues_150_price">95 грн</string>
    <string name="body_40_headline">Body 40</string>
    <string name="body_40_details">Колготки 40 ден. Колготки мають добру втяжку завдяки трусикам щільністю 100 ден. Є розміри 2, 3, 4.</string>
    <string name="body_40_price">80 грн</string>
    <string name="body_form_20_headline">Body Form 20</string>
    <string name="body_form_20_details">Колготки 20 ден. Це прозорі колготки з щільними трусиками. Для тих кому потрібно підтягнути все зайве. Є розміри 2, 3, 4</string>
    <string name="body_form_20_price">115 грн</string>
    <string name="celia_headline">Celia</string>
    <string name="celia_details">Колготки з бавовни, з п\'яточкою. Натуральні, теплі та м\'якенькі на дотик. Є 2, 3, 4, 5.</string>
    <string name="celia_price">260 грн</string>
    <string name="chic_headline">Chic</string>
    <string name="chic_details">Фантазійні колготки 20 ден зі швом. Дуже гладеньки, приємні на дотик. Є розміри 2, 3, 4. Багато кольорів.</string>
    <string name="chic_price">70 грн</string>
    <string name="ciao_20_headline">Ciao 20</string>
    <string name="ciao_20_details">Колготки 20 ден. Це прозорі шовковисті колготки, з шортиками та носочком. Топ продажів. Є розміри 2, 3, 4, 5 різних кольорів.</string>
    <string name="ciao_20_price">55 грн</string>
    <string name="ciao_40_headline">Ciao 40</string>
    <string name="ciao_40_details">Колготки 40 ден. Це прозорі шовковисті колготки, з шортиками та носочком. Топ продажів. Є розміри 2, 3, 4, 5 різних кольорів.</string>
    <string name="ciao_40_price">65 грн</string>
    <string name="cotton_knee_highs_headline">Напівпанчохи</string>
    <string name="cotton_knee_highs_details">Напівпанчохи з бавовни. Розмір 23 та 25</string>
    <string name="cotton_knee_highs_price">45 грн</string>
    <string name="dilek_1_headline">Шкарпетки чоловічі</string>
    <string name="dilek_1_details">Шкарпетки високі, з шовку, легкі. Розміри 39...46</string>
    <string name="dilek_1_price">50 грн</string>
    <string name="dotted_headline">Гетри</string>
    <string name="dotted_details">Гетри з бавовни. Розмір універсальний.</string>
    <string name="dotted_price">35 грн</string>
    <string name="ducks_headline">Шкарпетки короткі</string>
    <string name="ducks_details">Шкарпетки короткі, з бавовни.</string>
    <string name="ducks_price">30 грн</string>
    <string name="dynamic_20_headline">Dynamic 20</string>
    <string name="dynamic_20_details">Колготки 20 ден. Це прозорі колготки з трусиками. Дуже гладеньки, приємні на дотик. Є розміри 2, 3, 4.</string>
    <string name="dynamic_20_price">80 грн</string>
    <string name="effect_up_100_headline">Effect Up 100</string>
    <string name="effect_up_100_details">Колготки 100 ден з мікрофібри та втягуючими шортиками з бразильським ефектом. Надійні та комфортні, м\'якенькі на дотик. Є 2, 3, 4, 5 розміри.</string>
    <string name="effect_up_100_price">130 грн</string>
    <string name="effect_up_40_headline">Effect Up 40</string>
    <string name="effect_up_40_details">Колготки 40 ден. Колготки мають добру втяжку завдяки шортикам з бразильським ефектом щільністю 150 ден. Є розміри 2, 3, 4, 5.</string>
    <string name="effect_up_40_price">120 грн</string>
    <string name="emotion_20_headline">Emotion 20</string>
    <string name="emotion_20_details">Панчохи тоненькі з мереживом на сіліконі, різних кольорів. Є розміри 1/2, 3/4.</string>
    <string name="emotion_20_price">95 грн</string>
    <string name="emotion_40_headline">Emotion 40</string>
    <string name="emotion_40_details">Панчохи 40 ден з мереживом на сіліконі. Є розміри 1/2, 3/4.</string>
    <string name="emotion_40_price">100 грн</string>
    <string name="emotion_rete_vision_headline">     Emotion rete vision</string>
    <string name="emotion_rete_vision_details">Панчохи 40 ден з мереживом на сіліконі, в основі мікросітка. Є розміри 1/2, 3/4.</string>
    <string name="emotion_rete_vision_price">130 грн</string>
    <string name="erotic_30_headline">Erotic 30</string>
    <string name="erotic_30_details">Колготки 30 ден. Колготки мають комфортний пояс з мережива та сілікона (як на панчохах). Є розміри 2, 3, 4</string>
    <string name="erotic_30_price">150 грн</string>
    <string name="fine_mesh_socks_1_headline">Шкарпетки</string>
    <string name="fine_mesh_socks_1_details">Шкарпетки капронові в сіточку.</string>
    <string name="fine_mesh_socks_1_price">10 грн</string>
    <string name="fine_mesh_socks_2_headline">Шкарпетки</string>
    <string name="fine_mesh_socks_2_details">Шкарпетки капронові в сіточку.</string>
    <string name="fine_mesh_socks_2_price">10 грн</string>
    <string name="flirt_headline">Flirt 20</string>
    <string name="flirt_details">Фантазійні панчохи 40 ден з мереживом на сіліконі. Є розмір 1/2</string>
    <string name="flirt_price">120 грн</string>
    <string name="footprints_men_headline">Сліди з бавовни</string>
    <string name="footprints_men_details">Сліди з бавовни. Розміри 25,27,29,31.</string>
    <string name="footprints_men_price">35 грн</string>
    <string name="footprints_women_headline">Сліди з бавовни</string>
    <string name="footprints_women_details">Сліди з бавовни. Розміри 23,25.</string>
    <string name="footprints_women_price">35 грн</string>
    <string name="gaiters_headline">Гетри</string>
    <string name="gaiters_details">Гетри чорні з бавовни</string>
    <string name="gaiters_price">65 грн</string>
    <string name="galaxy_120_headline">Galaxy 120</string>
    <string name="galaxy_120_details">Колготки 120 ден гладенькі, наче лосіни. Надійні та комфортні. Є 2, 3, 4 розміри</string>
    <string name="galaxy_120_price">115 грн</string>
    <string name="green_strip_headline">Гетри</string>
    <string name="green_strip_details">Гетри з бавовни. Розмір універсальний.</string>
    <string name="green_strip_price">35 грн</string>
    <string name="headline_headline">Headline 1</string>
    <string name="headline_details">Фантазійні колготки 40 ден. В основі мікротюль. Є розміри 2, 3</string>
    <string name="headline_price">105 грн</string>
    <string name="impresso_100_headline">Impresso 100</string>
    <string name="impresso_100_details">Колготки 100 ден з мікрофібри та мереживним поясом на сіліконі. Надійні та комфортні, м\'якенькі на дотик. Є 2, 3, 4 розміри.</string>
    <string name="impresso_100_price">140 грн</string>
    <string name="impresso_40_headline">Impresso 40</string>
    <string name="impresso_40_details">Колготки 40 ден. Колготки мають комфортний пояс з мережива та сілікона. Є розміри 2, 3, 4.</string>
    <string name="impresso_40_price">120 грн</string>
    <string name="infinity_8_headline">Infinity 8</string>
    <string name="infinity_8_details">Колготки 8 ден ідеальні для свята. Не мають шортиків та мисочка на пальчиках. Є чорного та декількох тілесних відтінків. Є 2, 3, 4 розміри.</string>
    <string name="infinity_8_price">70 грн</string>
    <string name="invisible_30_headline">Invisible 30</string>
    <string name="invisible_30_details">Колготки 30 ден. Колготки мають добру втяжку завдяки прозорим шортикам утвореним додатковими рядами лайкри. Є розміри 2, 3, 4.</string>
    <string name="invisible_30_price">150 грн</string>
    <string name="kena_611_headline">Шкарпетки</string>
    <string name="kena_611_details">Шкарпетки капронові плотні.</string>
    <string name="kena_611_price">18 грн</string>
    <string name="konopli_headline">Шкарпетки чоловічі</string>
    <string name="konopli_details">Шкарпетки високі, з бавовни, демісезонні, розміри 39...46.</string>
    <string name="konopli_price">40 грн</string>
    <string name="lady_may_headline">Lady May</string>
    <string name="short_men_socks_1_headline">Шкарпетки чоловічі</string>
    <string name="short_men_socks_1_details">Шкарпетки короткі, з бавовни, розміри 39...44.</string>
    <string name="short_men_socks_1_price">20 грн</string>
</resources>