<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="404dp"
    android:layout_height="542dp"
    android:background="@drawable/telewall"
    android:padding="8dp"
    tools:context=".fragments.OrderFragment">

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/etName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etSize"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etColor"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/etSize"
        app:layout_constraintTop_toBottomOf="@+id/etSize" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etNumber"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/etColor"
        app:layout_constraintTop_toBottomOf="@+id/etColor" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etPhone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/etNumber"
        app:layout_constraintTop_toBottomOf="@+id/etNumber" />

    <ImageButton
        android:id="@+id/ibtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:src="@android:drawable/checkbox_on_background"
        app:layout_constraintStart_toEndOf="@+id/etName"
        app:layout_constraintTop_toTopOf="@+id/etName" />

    <ImageButton
        android:id="@+id/ibtSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:src="@android:drawable/checkbox_on_background"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/etSize"
        app:layout_constraintTop_toTopOf="@+id/etSize" />

    <ImageButton
        android:id="@+id/ibtColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:src="@android:drawable/checkbox_on_background"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/etColor"
        app:layout_constraintTop_toTopOf="@+id/etColor" />

    <ImageButton
        android:id="@+id/ibtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:src="@android:drawable/checkbox_on_background"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/etNumber"
        app:layout_constraintTop_toTopOf="@+id/etNumber" />

    <ImageButton
        android:id="@+id/ibtPhone"
        android:layout_width="43dp"
        android:layout_height="42dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:src="@android:drawable/ic_menu_send"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/etPhone"
        app:layout_constraintTop_toTopOf="@+id/etPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>